--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Crowdflower_api",
+  "name": "nodejs-crowdflower",
   "version": "0.0.0",
   "description": "provide API interact with crowdflower",
   "main": "./lib/crowdflower.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/EasonWang90/crowd-API.git"
+    "url": "https://github.com/EasonWang90/nodejs-crowdflower.git"
   },
   "keywords": [
     "crowdflower"
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/EasonWang90/crowd-API/issues"
+    "url": "https://github.com/EasonWang90/nodejs-crowdflower/issues"
   },
-  "homepage": "https://github.com/EasonWang90/crowd-API"
+  "homepage": "https://github.com/EasonWang90/nodejs-crowdflower"
 }
